add logo in small screen

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
         <nav class="navbar" data-navbar>
           <div class="wrapper">
-            <a href="#" class="logo">Xorinse</a>
+            <a href="#" class="logo"
+              >><img src="./assets/logo.svg" alt="xorinse logo"
+            /></a>
 
             <button
               class="nav-close-btn"
