--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navbar" data-navbar>
           <div class="wrapper">
             <a href="#" class="logo"
-              >><img src="./assets/logo.svg" alt="xorinse logo"
+              ><img src="./assets/logo.svg" alt="xorinse logo"
             /></a>
 
             <button
