add media production service

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
               </h1>
 
               <p class="hero-text" id="contact-us">
-                At Xorinse we specialize in designing, building, shipping and
-                scaling beautiful, usable products with blazing-fast efficiency
+                At Xorinse, we excel in crafting, producing, constructing,
+                delivering, and expanding stunning, user-friendly products with
+                lightning speed efficiency
               </p>
 
               <div class="wrapper">
@@ -150,7 +151,15 @@
               <li>
                 <div class="service-card" style="--color: 174, 77%, 50%">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Product Design</a>
+                    <a href="#" class="card-title">Graphic Design</a>
+                  </h3>
+                </div>
+              </li>
+
+              <li>
+                <div class="service-card" style="--color: 210, 100%, 53%">
+                  <h3 class="h3">
+                    <a href="#" class="card-title">Media Production</a>
                   </h3>
                 </div>
               </li>
@@ -181,14 +190,6 @@
 
               <li>
                 <div class="service-card" style="--color: 157, 89%, 44%">
-                  <h3 class="h3">
-                    <a href="#" class="card-title">DevOps</a>
-                  </h3>
-                </div>
-              </li>
-
-              <li>
-                <div class="service-card" style="--color: 210, 100%, 53%">
                   <h3 class="h3">
                     <a href="#" class="card-title">Internet of Things</a>
                   </h3>
@@ -298,8 +299,8 @@
 
             <p class="footer-text">
               Xorinse is a technology solutions provider company offering
-              services including design, SaaS, & custom software solutions (web,
-              mobile, desktop, IoT).
+              services including design, media production & custom software
+              solutions (web, mobile, desktop, IoT).
             </p>
 
             <ul class="social-list">
